add support for submarine swaps
