# src/bitcoind.rs
@@ -2,6 +2,7 @@ use base64::{engine::general_purpose, Engine as _};
 use bitcoin::blockdata::transaction::Transaction;
 use bitcoin::consensus::encode;
 use bitcoin::hash_types::BlockHash;
+use bitcoin::Amount;
 use lightning::chain::chaininterface::{BroadcasterInterface, ConfirmationTarget, FeeEstimator};
 use lightning::log_warn;
 use lightning::util::logger::Logger;
@@ -9,6 +10,7 @@ use lightning_block_sync::http::HttpEndpoint;
 use lightning_block_sync::http::JsonResponse;
 use lightning_block_sync::rpc::RpcClient;
 use lightning_block_sync::{AsyncBlockSourceResult, BlockData, BlockHeaderData, BlockSource};
+use serde_json::json;
 use std::collections::HashMap;
 use std::convert::TryInto;
 use std::str::FromStr;
@@ -96,6 +98,28 @@ pub struct FeeResponse {
     pub errored: bool,
 }
 
+#[derive(serde::Deserialize)]
+struct ScanTxOutSetResponse {
+    pub unspents: Vec<ScanTxOutSetUnspent>,
+}
+
+#[derive(serde::Deserialize)]
+struct ScanTxOutSetUnspent {
+    pub txid: String,
+    pub vout: u32,
+    pub amount: f64,
+    #[serde(rename = "scriptPubKey")]
+    pub script_pubkey: String,
+}
+
+#[derive(Clone, Debug)]
+pub struct ScannedUtxo {
+    pub txid: bitcoin::Txid,
+    pub vout: u32,
+    pub value_sat: u64,
+    pub script_pubkey_hex: String,
+}
+
 impl TryInto<FeeResponse> for JsonResponse {
     type Error = std::io::Error;
     fn try_into(self) -> std::io::Result<FeeResponse> {
@@ -106,6 +130,14 @@ impl TryInto<FeeResponse> for JsonResponse {
                 (feerate_btc_per_kvbyte * 100_000_000.0 / 4.0).round() as u32
             }),
         })
+    }
+}
+
+impl TryInto<ScanTxOutSetResponse> for JsonResponse {
+    type Error = std::io::Error;
+    fn try_into(self) -> std::io::Result<ScanTxOutSetResponse> {
+        serde_json::from_value(self.0)
+            .map_err(|e| std::io::Error::new(std::io::ErrorKind::InvalidData, e.to_string()))
     }
 }
 
@@ -301,6 +333,77 @@ impl BitcoindClient {
             .await
             .unwrap()
     }
+
+    pub async fn get_block_height(&self) -> std::io::Result<u32> {
+        let info = self
+            .bitcoind_rpc_client
+            .call_method::<BlockchainInfo>("getblockchaininfo", &[])
+            .await?;
+        u32::try_from(info.latest_height).map_err(|_| {
+            std::io::Error::new(std::io::ErrorKind::InvalidData, "block height too large")
+        })
+    }
+
+    pub(crate) async fn get_txout_confirmations(
+        &self,
+        txid: &bitcoin::Txid,
+        vout: u32,
+    ) -> std::io::Result<Option<u64>> {
+        let params = [json!(txid.to_string()), json!(vout), json!(true)];
+        let res = self
+            .bitcoind_rpc_client
+            .call_method::<serde_json::Value>("gettxout", &params)
+            .await
+            .map_err(|e| std::io::Error::other(e.to_string()))?;
+        if res.is_null() {
+            return Ok(None);
+        }
+        Ok(res["confirmations"].as_u64())
+    }
+
+    pub(crate) fn get_txout_confirmations_blocking(
+        &self,
+        txid: &bitcoin::Txid,
+        vout: u32,
+    ) -> std::io::Result<Option<u64>> {
+        if tokio::runtime::Handle::try_current().is_ok() {
+            tokio::task::block_in_place(|| {
+                self.handle
+                    .block_on(self.get_txout_confirmations(txid, vout))
+            })
+        } else {
+            self.handle
+                .block_on(self.get_txout_confirmations(txid, vout))
+        }
+    }
+
+    pub(crate) async fn scan_utxos_for_address(
+        &self,
+        address: &str,
+    ) -> std::io::Result<Vec<ScannedUtxo>> {
+        let descriptor = format!("addr({address})");
+        let params = [serde_json::json!("start"), serde_json::json!([descriptor])];
+        let res = self
+            .bitcoind_rpc_client
+            .call_method::<ScanTxOutSetResponse>("scantxoutset", &params)
+            .await
+            .map_err(|e| std::io::Error::other(e.to_string()))?;
+
+        let mut utxos = Vec::new();
+        for unspent in res.unspents {
+            let txid = bitcoin::Txid::from_str(&unspent.txid)
+                .map_err(|e| std::io::Error::new(std::io::ErrorKind::InvalidData, e.to_string()))?;
+            let amount = Amount::from_btc(unspent.amount)
+                .map_err(|e| std::io::Error::new(std::io::ErrorKind::InvalidData, e.to_string()))?;
+            utxos.push(ScannedUtxo {
+                txid,
+                vout: unspent.vout,
+                value_sat: amount.to_sat(),
+                script_pubkey_hex: unspent.script_pubkey,
+            });
+        }
+        Ok(utxos)
+    }
 }
 
 impl FeeEstimator for BitcoindClient {
@@ -353,6 +456,6 @@ impl BroadcasterInterface for BitcoindClient {
 					print!("Warning, failed to broadcast a transaction, this is likely okay but may indicate an error: {err_str}\n> ");
 				}
 			}
-		});
+        });
     }
 }
